# Downpour

./: .eslintrc.cjs  .gitignore  README.md  install.sh  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/downpour-desktop/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/downpour-desktop/src/: styles.css
apps/downpour-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/downpour-desktop/src-tauri/capabilities/: default.json
apps/downpour-desktop/src-tauri/icons/: icon.icns
apps/downpour-desktop/src-tauri/src/: commands.rs  db.rs  engine.rs  errors.rs  lib.rs  main.rs  migrations.rs  models.rs  paths.rs
apps/downpour-desktop/src/app/: App.tsx  errors.ts  router.ts  useBootstrap.ts  useLearnProgress.ts  useRecords.ts  useSettings.ts
apps/downpour-desktop/src/assets/wordlists/: SCOWL-Copyright.txt  scowl-common.txt  scowl-extended.txt  starter.txt
apps/downpour-desktop/src/engine/: canvasRenderer.ts  cityLayer.ts  gameLoop.ts  performanceProfile.ts  rainSystem.ts  rippleField.ts  types.ts  wordRenderer.ts
apps/downpour-desktop/src/game/: audio.ts  constants.ts  difficulty.ts  gameController.ts  metrics.ts  scoring.ts  stateMachine.ts  targeting.ts  wordBuckets.ts  wordList.ts
apps/downpour-desktop/src/learn/: keyboardLayout.ts  lessons.ts  practiceController.ts
apps/downpour-desktop/src/tauri/: commands.ts  mappers.ts  storage.ts
docs/: architecture.md  index.html  styles.css
docs/superpowers/specs/: 2026-04-03-codebase-improvements-design.md
scripts/: update-wordlists.mjs
(+34 files in other folders)
