[package]
name = "downpour"
version = "0.2.1"
description = "Downpour desktop typing game"
authors = ["Richard Huang"]
edition = "2021"

[lib]
name = "downpour_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = [] }
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
